fix: gdh-1226 | Floating contact titles contrast

--- a/components/FloatingContact/src/index.scss
+++ b/components/FloatingContact/src/index.scss
@@ -261,6 +261,7 @@
   margin-block-start: 0;
   margin-block-end: 0;
   position: relative;
+  color: var(--denhaag-floating-contact-item-title-color);
 }
 
 .denhaag-floating-contact__item--online .denhaag-floating-contact__item-title::after,
